--- a/Doctor/DcPlan.xaml
+++ b/Doctor/DcPlan.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Doctor"
         mc:Ignorable="d"
-        WindowStyle="None" AllowDrop="True" ResizeMode="NoResize"   BorderThickness="0"  Height="500" Width="800">
+        WindowStyle="None" AllowDrop="True" Loaded="Window_Loaded" MouseLeftButtonDown="Window_MouseLeftButtonDown" ResizeMode="NoResize"   BorderThickness="0"  Height="500" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
@@ -14,7 +14,7 @@
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#F8F8F8 " >
             <Label x:Name="titleLabel" FontWeight="Bold"  Margin="0,0,0,0.4" HorizontalContentAlignment="Left"    FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="417">治疗方案</Label>
 
-            <Button   Template="{StaticResource CloseWindwoBtn}" Margin="360,0,0,0" />
+            <Button  Click="Button_Click"  Template="{StaticResource CloseWindwoBtn}" Margin="360,0,0,0" />
         </StackPanel>
         <StackPanel  Grid.Row="1" Background="White">
             <StackPanel Orientation="Horizontal" >
@@ -22,47 +22,71 @@
                
             </StackPanel>
             <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
-                <Label VerticalContentAlignment="Center" FontSize="15"  HorizontalContentAlignment="Center" Height="40" Width="800"  Background="#F4F4F4" >注意休息   注意保暖   注意休息   注意保暖   注意休息   注意保暖   注意休息</Label>
-    
+                
+                <ListBox x:Name="ProgramMotherList"    HorizontalContentAlignment="Center" BorderThickness="0" HorizontalAlignment="Center" Width="800" Height="40"  >
+
+                    <ListBox.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Horizontal" IsItemsHost="True" Width="780"  />
+                        </ItemsPanelTemplate>
+                    </ListBox.ItemsPanel>
+                    <ListBox.ItemTemplate >
+
+                        <DataTemplate>
+                            <Label  Margin="5,0,0,0" VerticalContentAlignment="Center" FontSize="13"  HorizontalContentAlignment="Center" Height="30" Width="80"  Background="#F4F4F4" Tag="{Binding itemCode}"  Content="{Binding itemName}"></Label>
+                        </DataTemplate>
+
+                    </ListBox.ItemTemplate>
+
+                </ListBox>
+
 
             </StackPanel>
             <StackPanel Orientation="Horizontal" >
                 <Label Height="40" Width="320" FontSize="16" FontWeight="Bold" Padding="10" VerticalContentAlignment="Center" VerticalAlignment="Center">药物治疗</Label>
 
             </StackPanel>
-            <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
-                <Label VerticalContentAlignment="Center" FontSize="15" Padding="20,0,0,0" Foreground="#009EFF" FontWeight="Bold" HorizontalContentAlignment="Left" Height="40" Width="25"  Background="#F4F4F4" >I</Label>
-                <Label VerticalContentAlignment="Center" FontSize="15" HorizontalContentAlignment="Left" Height="40" Width="778"  Background="#F4F4F4" >抗感染</Label>
+            <StackPanel>
+                <ListBox x:Name="ItemProgramMotherList"    HorizontalContentAlignment="Center" BorderThickness="0" HorizontalAlignment="Center" Width="800" Height="340"  >
+
+                    <ListBox.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Vertical" IsItemsHost="True" Width="780"  />
+                        </ItemsPanelTemplate>
+                    </ListBox.ItemsPanel>
+                    <ListBox.ItemTemplate >
+
+                        <DataTemplate>
+                            <StackPanel>
+                                <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
+                                    <Label VerticalContentAlignment="Center" FontSize="15" Padding="20,0,0,0" Foreground="#009EFF" FontWeight="Bold" HorizontalContentAlignment="Left" Height="40" Width="25"  Background="#F4F4F4" >I</Label>
+                                    <Label VerticalContentAlignment="Center" FontSize="15" HorizontalContentAlignment="Left" Height="40" Width="778"  Background="#F4F4F4" Content="{Binding itemName}" ></Label>
 
 
+                                </StackPanel>
+                                <StackPanel Margin="0,0,0,0" Orientation="Horizontal">
+                                    <Label MaxWidth="900" FontSize="14" Margin="0,10,0,0" Padding="20,0,0,0">
+                                        <TextBlock  TextWrapping="Wrap" Text="{Binding itemChidNames}" />
+                                    </Label>
+
+
+                                </StackPanel>
+                            </StackPanel>
+                        </DataTemplate>
+
+                    </ListBox.ItemTemplate>
+
+                </ListBox>
+
+
+              
+                
+                
             </StackPanel>
-            <StackPanel Margin="0,0,0,0" Orientation="Horizontal">
-                <Label VerticalContentAlignment="Center" FontSize="15" Padding="20,0,0,0"  HorizontalContentAlignment="Left" Height="40" Width="800"  Background="#F4F4F4" >注意休息   注意保暖   注意休息   注意保暖   注意休息   注意保暖   注意休息</Label>
-
-
-            </StackPanel>
-            <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
-                <Label VerticalContentAlignment="Center" FontSize="15" Padding="20,0,0,0" Foreground="#009EFF" FontWeight="Bold" HorizontalContentAlignment="Left" Height="40" Width="25"  Background="#F4F4F4" >I</Label>
-                <Label VerticalContentAlignment="Center" FontSize="15" HorizontalContentAlignment="Left" Height="40" Width="778"  Background="#F4F4F4" >抗感染</Label>
-
-
-            </StackPanel>
-            <StackPanel Margin="0,0,0,0" Orientation="Horizontal">
-                <Label VerticalContentAlignment="Center" FontSize="15" Padding="20,0,0,0"  HorizontalContentAlignment="Left" Height="40" Width="800"  Background="#F4F4F4" >注意休息   注意保暖   注意休息   注意保暖   注意休息   注意保暖   注意休息</Label>
-
-
-            </StackPanel>
-            <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
-                <Label VerticalContentAlignment="Center" FontSize="15" Padding="20,0,0,0" Foreground="#009EFF" FontWeight="Bold" HorizontalContentAlignment="Left" Height="40" Width="25"  Background="#F4F4F4" >I</Label>
-                <Label VerticalContentAlignment="Center" FontSize="15" HorizontalContentAlignment="Left" Height="40" Width="778"  Background="#F4F4F4" >抗感染</Label>
-
-
-            </StackPanel>
-            <StackPanel Margin="0,0,0,0" Orientation="Horizontal">
-                <Label VerticalContentAlignment="Center" FontSize="15" Padding="20,0,0,0"  HorizontalContentAlignment="Left" Height="40" Width="800"  Background="#F4F4F4" >注意休息   注意保暖   注意休息   注意保暖   注意休息   注意保暖   注意休息</Label>
-
-
-            </StackPanel>
+        
+          
+          
+           
         </StackPanel>
        
     </Grid>
