--- a/Doctor/Plan.xaml
+++ b/Doctor/Plan.xaml
@@ -340,14 +340,14 @@
 
                             <StackPanel Orientation="Horizontal">
                                 <Label Height="35" Width="320" FontSize="13" FontWeight="Bold" Padding="10" VerticalContentAlignment="Center" VerticalAlignment="Center">一般治疗</Label>
-                                <Button  Style="{StaticResource GreenButton}" FontSize="13" Height="20" Width="60" Margin="10,0,0,0" >更多</Button>
+                                <Button Click="Button_Click_1" Style="{StaticResource GreenButton}" FontSize="13" Height="25" Width="60" Margin="10,0,0,0" >更多</Button>
                             </StackPanel>
                             <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
                                 <ListBox x:Name="ProgramMotherList"    HorizontalContentAlignment="Center" BorderThickness="0" HorizontalAlignment="Center" Width="400" Height="40"  >
 
                                     <ListBox.ItemsPanel>
                                         <ItemsPanelTemplate>
-                                            <WrapPanel Orientation="Horizontal" IsItemsHost="True" Width="390"  />
+                                            <WrapPanel Orientation="Horizontal" IsItemsHost="True" Width="380"  />
                                         </ItemsPanelTemplate>
                                     </ListBox.ItemsPanel>
                                     <ListBox.ItemTemplate >
@@ -365,7 +365,7 @@
 
                             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                                 <Label Height="35" Width="320" FontSize="13" FontWeight="Bold" Padding="10" VerticalContentAlignment="Center" VerticalAlignment="Center">药物治疗</Label>
-                                <Button  Style="{StaticResource GreenButton}" FontSize="13" Height="20" Width="60" Margin="10,0,0,0" >更多</Button>
+                                <Button Click="Button_Click_1"  Style="{StaticResource GreenButton}" FontSize="13" Height="25" Width="60" Margin="10,0,0,0" >更多</Button>
                             </StackPanel>
                             <StackPanel Orientation="Vertical">
 
@@ -373,7 +373,7 @@
 
                                     <ListBox.ItemsPanel>
                                         <ItemsPanelTemplate>
-                                            <WrapPanel Orientation="Vertical" IsItemsHost="True" Width="390"  />
+                                            <WrapPanel Orientation="Vertical" IsItemsHost="True" Width="380"  />
                                         </ItemsPanelTemplate>
                                     </ListBox.ItemsPanel>
                                     <ListBox.ItemTemplate >
@@ -381,7 +381,7 @@
                                         <DataTemplate>
                                             <StackPanel Orientation="Horizontal">
                                                 <Label Height="35" Width="140" FontSize="13"  Padding="10" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="{Binding drugInstructionsId}"></Label>
-                                                <Label Height="35" Width="180" FontSize="13"  Padding="10" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="{Binding drugInstructions}"></Label>
+                                                <Label Height="35" Width="160" FontSize="13"  Padding="10" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="{Binding drugInstructions}"></Label>
                                                 <Button Tag="{Binding drugid}" Click="Button_Click" Background="White" BorderBrush="White"  FontSize="13" FontWeight="Bold" Foreground="#009EFF" HorizontalContentAlignment="Right" Width="60">药品说明</Button>
                                             </StackPanel>
                                         </DataTemplate>
