--- a/Doctor/YsList.xaml
+++ b/Doctor/YsList.xaml
@@ -14,8 +14,8 @@
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#3484F5" >
             <Label x:Name="titleLabel" FontWeight="Bold"  Margin="0,0,0,0.4" HorizontalContentAlignment="Left"  Foreground="White"  FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="267">全科医生机器人辅助诊断系统</Label>
            
-            <Button   Template="{StaticResource MinBtn}" Margin="35,0,0,0" />
-            <Button   Template="{StaticResource CloseBtn}" Margin="5,0,0,0" />
+            <Button x:Name="MinBtn"  Click="MinBtn_Click" Template="{StaticResource MinBtn}" Margin="35,0,0,0" />
+            <Button x:Name="CloseBtn" Click="CloseBtn_Click"   Template="{StaticResource CloseBtn}" Margin="5,0,0,0" />
         </StackPanel>
         <StackPanel  Grid.Row="1" Background="White">
             <Grid>
