--- a/Doctor/YsList.xaml
+++ b/Doctor/YsList.xaml
@@ -60,9 +60,9 @@
                                 <ListBox.ItemTemplate >
 
                                     <DataTemplate>
-                                        <StackPanel Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
+                                        <StackPanel MouseLeftButtonDown="StackPanel_MouseLeftButtonDown" Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
 
-                                            <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
+                                            <Label Visibility="{Binding IsShowIcd}" Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
                                             <StackPanel Height="40" Orientation="Horizontal">
                                                 <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="12"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="{Binding disease}"/>
                                                 <Image Width="20" Visibility="{Binding degreeJi}"    Height="25" Source="/Doctor;component/Resources/急.png"></Image>
@@ -83,7 +83,7 @@
                         <StackPanel Grid.Row="3" Orientation="Horizontal">
                             <Image HorizontalAlignment="Center" VerticalAlignment="Center" Width="20" Height="20" Source="/Doctor;component/Resources/记录 .png"></Image>
                             <Label x:Name="MainCount" Height="40" Width="120"  FontSize="13" Foreground="Black"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="共计：0"/>
-                            <Button Margin="10,0,0,0" Background="White" BorderBrush="White"  FontWeight="Bold" Foreground="#009EFF" Click="Button_Click" HorizontalContentAlignment="Right" Width="200">查看更多>></Button>
+                            <Button  x:Name="More_Btn" Margin="10,0,0,0" Background="White" BorderBrush="White"  FontWeight="Bold" Foreground="#009EFF" Click="Button_Click" HorizontalContentAlignment="Right" Width="200">查看更多>></Button>
                         </StackPanel>
                     </Grid>
                 </StackPanel>
