--- a/Doctor/Plan.xaml
+++ b/Doctor/Plan.xaml
@@ -47,8 +47,7 @@
                         </StackPanel>
 
                         <StackPanel Grid.Row="2" Orientation="Vertical" >
-                            <ListBox x:Name="YsListDb"    HorizontalContentAlignment="Center" BorderThickness="0" HorizontalAlignment="Center" Width="285" Height="520"  >
-
+                            <ListBox x:Name="YsListDb" HorizontalContentAlignment="Center" BorderThickness="0" HorizontalAlignment="Center" Width="285" Height="520">
                                 <ListBox.ItemsPanel>
                                     <ItemsPanelTemplate>
                                         <WrapPanel Orientation="Vertical" IsItemsHost="True" Width="280"  />
@@ -60,7 +59,7 @@
                                         <StackPanel Tag="{Binding icd10}" MouseLeftButtonDown="StackPanel_MouseLeftButtonDown" Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
 
                                             <Label Visibility="{Binding IsShowIcd}" Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
-                                            <Label  Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
+                                            
                                             <StackPanel Height="40" Orientation="Horizontal">
                                                 <Label Height="40" Width="90"  FontSize="11"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="{Binding disease}"/>
                                                 <Image Width="20" Visibility="{Binding degreeJi}"    Height="25" Source="/Doctor;component/Resources/急.png"></Image>
@@ -127,9 +126,7 @@
                                 <ListBox.ItemTemplate >
 
                                     <DataTemplate>
-                                        <Border CornerRadius="5"  Height="30" Margin="3,0,0,0"  BorderThickness="3" BorderBrush="#F4F4F4">
-                                            <Label FontSize="12" VerticalContentAlignment="Center"  HorizontalContentAlignment="Center"  Background="#F4F4F4" Content="{Binding Name}" ></Label>
-                                        </Border>
+                                        <Label MouseLeftButtonDown="Label_MouseLeftButtonDown" Margin="4,4,4,4" VerticalContentAlignment="Center" FontSize="12"  HorizontalContentAlignment="Center" Height="30"  Background="#F4F4F4" Content="{Binding Name}" Style="{StaticResource WhiteButton_Label}"></Label>
                                     </DataTemplate>
 
                                 </ListBox.ItemTemplate>
