--- a/Doctor/Plan.xaml
+++ b/Doctor/Plan.xaml
@@ -145,13 +145,13 @@
                         <ScrollViewer  Grid.Row="4" Width="270" Height="260" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                             <StackPanel MaxWidth="250" Background="White" Orientation="Vertical">
                                 <StackPanel>
-                                    <StackPanel Orientation="Horizontal" Height="40">
-                                        <Button x:Name="ButtonSQ1" Width="12" Height="12" Margin="10,0,0,0" Click="ButtonSQ1_Click" Template="{StaticResource ShouQi}"></Button>
+                                    <StackPanel Orientation="Horizontal" Height="30">
+                                        <Button x:Name="ButtonSQ1" Width="12" Height="12" Margin="10,0,0,0" Click="ButtonSQ1_Click" Template="{StaticResource ZhanKai}"></Button>
                                         <Label Height="35" Width="200" FontSize="13" FontWeight="Bold"  Padding="10" VerticalContentAlignment="Center" VerticalAlignment="Center">临床缺点</Label>
 
                                     </StackPanel>
                                     <Rectangle  HorizontalAlignment="Stretch"  Width="270" VerticalAlignment="Center" Fill="#e6e6e6" Height="1"/>
-                                    <StackPanel x:Name="SQ1Panel" >
+                                    <StackPanel x:Name="SQ1Panel" Height="0">
                                         <Label MaxWidth="255"  FontSize="12" Padding="10,0,0,0">
                                             <ScrollViewer Width="250" MaxHeight="150" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                                                 <TextBlock x:Name="LinChuang" MaxWidth="230" TextWrapping="Wrap"
@@ -163,13 +163,13 @@
 
                                 </StackPanel>
                                 <StackPanel>
-                                    <StackPanel Orientation="Horizontal" Height="40">
-                                        <Button x:Name="ButtonSQ2" Click="ButtonSQ2_Click" Width="12" Height="12" Margin="10,0,0,0" Template="{StaticResource ShouQi}"></Button>
+                                    <StackPanel Orientation="Horizontal" Height="30">
+                                        <Button x:Name="ButtonSQ2" Click="ButtonSQ2_Click" Width="12" Height="12" Margin="10,0,0,0" Template="{StaticResource ZhanKai}"></Button>
                                         <Label Height="35" Width="200" FontSize="13" FontWeight="Bold"  Padding="10" VerticalContentAlignment="Center" VerticalAlignment="Center">疾病诊断</Label>
 
                                     </StackPanel>
                                     <Rectangle  HorizontalAlignment="Stretch"  Width="270" VerticalAlignment="Center" Fill="#e6e6e6" Height="1"/>
-                                    <StackPanel x:Name="SQ2Panel" >
+                                    <StackPanel x:Name="SQ2Panel" Height="0">
                                         <Label MaxWidth="255"  FontSize="12" Padding="10,0,0,0">
                                             <ScrollViewer Width="250" MaxHeight="150" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                                                 <TextBlock x:Name="ZhenDuan" MaxWidth="230" TextWrapping="Wrap"
@@ -181,13 +181,13 @@
 
                                 </StackPanel>
                                 <StackPanel>
-                                    <StackPanel Orientation="Horizontal" Height="40">
-                                        <Button x:Name="ButtonSQ3" Click="ButtonSQ3_Click" Width="12" Height="12" Margin="10,0,0,0" Template="{StaticResource ShouQi}"></Button>
+                                    <StackPanel Orientation="Horizontal" Height="30">
+                                        <Button x:Name="ButtonSQ3" Click="ButtonSQ3_Click" Width="12" Height="12" Margin="10,0,0,0" Template="{StaticResource ZhanKai}"></Button>
                                         <Label Height="35" Width="200" FontSize="13" FontWeight="Bold"  Padding="10" VerticalContentAlignment="Center" VerticalAlignment="Center">疾病概述</Label>
 
                                     </StackPanel>
                                     <Rectangle  HorizontalAlignment="Stretch"  Width="270" VerticalAlignment="Center" Fill="#e6e6e6" Height="1"/>
-                                    <StackPanel x:Name="SQ3Panel" >
+                                    <StackPanel x:Name="SQ3Panel" Height="0">
                                         <Label MaxWidth="255"  FontSize="12" Padding="10,0,0,0">
                                             <ScrollViewer Width="250" MaxHeight="150" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                                                 <TextBlock x:Name="GaiShu" MaxWidth="230" TextWrapping="Wrap" Text="" />
@@ -198,13 +198,13 @@
 
                                 </StackPanel>
                                 <StackPanel>
-                                    <StackPanel Orientation="Horizontal" Height="40">
-                                        <Button x:Name="ButtonSQ4" Click="ButtonSQ4_Click" Width="12" Height="12" Margin="10,0,0,0" Template="{StaticResource ShouQi}"></Button>
+                                    <StackPanel Orientation="Horizontal" Height="30">
+                                        <Button x:Name="ButtonSQ4" Click="ButtonSQ4_Click" Width="12" Height="12" Margin="10,0,0,0" Template="{StaticResource ZhanKai}"></Button>
                                         <Label Height="35" Width="200" FontSize="13" FontWeight="Bold"  Padding="10" VerticalContentAlignment="Center" VerticalAlignment="Center">辅助检查</Label>
 
                                     </StackPanel>
                                     <Rectangle  HorizontalAlignment="Stretch"  Width="270" VerticalAlignment="Center" Fill="#e6e6e6" Height="1"/>
-                                    <StackPanel x:Name="SQ4Panel" >
+                                    <StackPanel x:Name="SQ4Panel" Height="0">
                                         <Label MaxWidth="255"  FontSize="12" Padding="10,0,0,0">
                                             <ScrollViewer Width="250" MaxHeight="150" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                                                 <TextBlock x:Name="JianCha" MaxWidth="230" TextWrapping="Wrap"
@@ -216,13 +216,13 @@
 
                                 </StackPanel>
                                 <StackPanel>
-                                    <StackPanel Orientation="Horizontal" Height="40">
-                                        <Button Width="12" x:Name="ButtonSQ5" Click="ButtonSQ5_Click" Height="12" Margin="10,0,0,0" Template="{StaticResource ShouQi}"></Button>
+                                    <StackPanel Orientation="Horizontal" Height="30">
+                                        <Button Width="12" x:Name="ButtonSQ5" Click="ButtonSQ5_Click" Height="12" Margin="10,0,0,0" Template="{StaticResource ZhanKai}"></Button>
                                         <Label Height="35" Width="200" FontSize="13" FontWeight="Bold"  Padding="10" VerticalContentAlignment="Center" VerticalAlignment="Center">预防和预后</Label>
 
                                     </StackPanel>
                                     <Rectangle  HorizontalAlignment="Stretch"  Width="270" VerticalAlignment="Center" Fill="#e6e6e6" Height="1"/>
-                                    <StackPanel x:Name="SQ5Panel" >
+                                    <StackPanel x:Name="SQ5Panel" Height="0">
                                         <Label MaxWidth="255"  FontSize="12" Padding="10,0,0,0">
                                             <ScrollViewer Width="250" MaxHeight="150" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                                                 <TextBlock x:Name="YuFang" MaxWidth="230" TextWrapping="Wrap"
@@ -234,13 +234,13 @@
 
                                 </StackPanel>
                                 <StackPanel>
-                                    <StackPanel Orientation="Horizontal" Height="40">
-                                        <Button Width="12" x:Name="ButtonSQ6" Click="ButtonSQ6_Click" Height="12" Margin="10,0,0,0" Template="{StaticResource ShouQi}"></Button>
+                                    <StackPanel Orientation="Horizontal" Height="30">
+                                        <Button Width="12" x:Name="ButtonSQ6" Click="ButtonSQ6_Click" Height="12" Margin="10,0,0,0" Template="{StaticResource ZhanKai}"></Button>
                                         <Label Height="35" Width="200" FontSize="13" FontWeight="Bold"  Padding="10" VerticalContentAlignment="Center" VerticalAlignment="Center">治疗方案</Label>
 
                                     </StackPanel>
                                     <Rectangle  HorizontalAlignment="Stretch"  Width="270" VerticalAlignment="Center" Fill="#e6e6e6" Height="1"/>
-                                    <StackPanel x:Name="SQ6Panel" >
+                                    <StackPanel x:Name="SQ6Panel" Height="0">
                                         <Label MaxWidth="255"  FontSize="12" Padding="10,0,0,0">
                                             <ScrollViewer Width="250" MaxHeight="150" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                                                 <TextBlock x:Name="ZhiLiao" MaxWidth="230" TextWrapping="Wrap"
@@ -253,13 +253,13 @@
                                 </StackPanel>
 
                                 <StackPanel>
-                                    <StackPanel Orientation="Horizontal" Height="40">
-                                        <Button x:Name="ButtonSQ7" Click="ButtonSQ7_Click" Width="12" Height="12" Margin="10,0,0,0" Template="{StaticResource ShouQi}"></Button>
+                                    <StackPanel Orientation="Horizontal" Height="30">
+                                        <Button x:Name="ButtonSQ7" Click="ButtonSQ7_Click" Width="12" Height="12" Margin="10,0,0,0" Template="{StaticResource ZhanKai}"></Button>
                                         <Label Height="35" Width="200" FontSize="13" FontWeight="Bold"  Padding="10" VerticalContentAlignment="Center" VerticalAlignment="Center">治疗原则</Label>
 
                                     </StackPanel>
                                     <Rectangle  HorizontalAlignment="Stretch"  Width="270" VerticalAlignment="Center" Fill="#e6e6e6" Height="1"/>
-                                    <StackPanel x:Name="SQ7Panel" >
+                                    <StackPanel x:Name="SQ7Panel" Height="0">
                                         <Label MaxWidth="255"  FontSize="12" Padding="10,0,0,0">
                                             <ScrollViewer Width="250" MaxHeight="150" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                                                 <TextBlock x:Name="YuanZe" MaxWidth="230" TextWrapping="Wrap"
@@ -271,13 +271,13 @@
 
                                 </StackPanel>
                                 <StackPanel>
-                                    <StackPanel Orientation="Horizontal" Height="40">
-                                        <Button x:Name="ButtonSQ8" Click="ButtonSQ8_Click" Width="12" Height="12" Margin="10,0,0,0" Template="{StaticResource ShouQi}"></Button>
+                                    <StackPanel Orientation="Horizontal" Height="30">
+                                        <Button x:Name="ButtonSQ8" Click="ButtonSQ8_Click" Width="12" Height="12" Margin="10,0,0,0" Template="{StaticResource ZhanKai}"></Button>
                                         <Label Height="35" Width="200" FontSize="13" FontWeight="Bold"  Padding="10" VerticalContentAlignment="Center" VerticalAlignment="Center">流行病学</Label>
 
                                     </StackPanel>
                                     <Rectangle  HorizontalAlignment="Stretch"  Width="270" VerticalAlignment="Center" Fill="#e6e6e6" Height="1"/>
-                                    <StackPanel x:Name="SQ8Panel" >
+                                    <StackPanel x:Name="SQ8Panel" Height="0">
                                         <Label MaxWidth="255"  FontSize="12" Padding="10,0,0,0">
                                             <ScrollViewer Width="250" MaxHeight="150" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                                                 <TextBlock x:Name="LiuXing" MaxWidth="230" TextWrapping="Wrap"
@@ -289,13 +289,13 @@
 
                                 </StackPanel>
                                 <StackPanel>
-                                    <StackPanel Orientation="Horizontal" Height="40">
-                                        <Button x:Name="ButtonSQ9" Click="ButtonSQ9_Click" Width="12" Height="12" Margin="10,0,0,0" Template="{StaticResource ShouQi}"></Button>
+                                    <StackPanel Orientation="Horizontal" Height="30">
+                                        <Button x:Name="ButtonSQ9" Click="ButtonSQ9_Click" Width="12" Height="12" Margin="10,0,0,0" Template="{StaticResource ZhanKai}"></Button>
                                         <Label Height="35" Width="200" FontSize="13" FontWeight="Bold"  Padding="10" VerticalContentAlignment="Center" VerticalAlignment="Center">常见症状</Label>
 
                                     </StackPanel>
                                     <Rectangle  HorizontalAlignment="Stretch"  Width="270" VerticalAlignment="Center" Fill="#e6e6e6" Height="1"/>
-                                    <StackPanel x:Name="SQ9Panel" >
+                                    <StackPanel x:Name="SQ9Panel" Height="0">
                                         <Label MaxWidth="255"  FontSize="12" Padding="10,0,0,0">
                                             <ScrollViewer Width="250" MaxHeight="150" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                                                 <TextBlock x:Name="Changjian" MaxWidth="230" TextWrapping="Wrap"
