--- a/Doctor/YpExplain.xaml
+++ b/Doctor/YpExplain.xaml
@@ -17,7 +17,7 @@
 
             <Button  Click="Button_Click"  Template="{StaticResource CloseWindwoBtn}" Margin="440,0,0,0" />
         </StackPanel>
-        <StackPanel  Grid.Row="2" >
+        <ScrollViewer  Grid.Row="2" >
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="35"></RowDefinition>
@@ -46,18 +46,18 @@
                     <Label Height="35" Width="260" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left" FontWeight="Bold" VerticalContentAlignment="Center" VerticalAlignment="Center">适应症</Label>
 
                 </StackPanel>
-                <ScrollViewer  Grid.Row="3" Width="900" Height="100" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+                <StackPanel  Grid.Row="3" Width="900" Height="100" >
                     <Label MaxWidth="900" FontSize="14" Margin="0,10,0,0" Padding="20,0,0,0">
                         <TextBlock x:Name="ShiYing" TextWrapping="Wrap" Text="" />
                     </Label>
-                </ScrollViewer>
+                </StackPanel>
 
                 <StackPanel Grid.Row="4">
                     <Label Height="35" Width="260" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left" FontWeight="Bold" VerticalContentAlignment="Center" VerticalAlignment="Center">不良反应</Label>
 
                 </StackPanel>
                 <ScrollViewer  Grid.Row="5" Width="900" Height="100" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-                    <Label MaxWidth="900" FontSize="14" Margin="0,10,0,0" Padding="20,0,0,0">
+                    <Label MaxWidth="860" FontSize="14" Margin="0,10,0,0" Padding="20,0,0,0">
                         <TextBlock x:Name="BuLiang" TextWrapping="Wrap" Text="" />
                     </Label>
                 </ScrollViewer>
@@ -65,23 +65,23 @@
                     <Label Height="35" Width="260" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left" FontWeight="Bold" VerticalContentAlignment="Center" VerticalAlignment="Center">使用说明</Label>
 
                 </StackPanel>
-                <ScrollViewer  Grid.Row="7" Width="900" Height="100" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-                    <Label MaxWidth="900" FontSize="14" Margin="0,10,0,0" Padding="20,0,0,0">
+                <StackPanel  Grid.Row="7" Width="900" Height="100" >
+                    <Label MaxWidth="860" FontSize="14" Margin="0,10,0,0" Padding="20,0,0,0">
                         <TextBlock x:Name="ShuoMing" TextWrapping="Wrap" Text="" />
                     </Label>
-                </ScrollViewer>
+                </StackPanel>
                 <StackPanel Grid.Row="8">
                     <Label Height="35" Width="260" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left" FontWeight="Bold" VerticalContentAlignment="Center" VerticalAlignment="Center">禁忌症</Label>
 
                 </StackPanel>
-                <ScrollViewer  Grid.Row="9" Width="900" Height="100" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-                    <Label MaxWidth="900" FontSize="14" Margin="0,10,0,0" Padding="20,0,0,0">
+                <StackPanel  Grid.Row="9" Width="900" Height="100"   >
+                    <Label MaxWidth="860" FontSize="14" Margin="0,10,0,0" Padding="20,0,0,0">
                         <TextBlock x:Name="Jinji" TextWrapping="Wrap" Text="" />
                     </Label>
-                </ScrollViewer>
+                </StackPanel>
             </Grid>
           
-        </StackPanel>
+        </ScrollViewer>
        
     </Grid>
 </Window>
