--- a/Doctor/DefultWindow.xaml
+++ b/Doctor/DefultWindow.xaml
@@ -15,7 +15,7 @@
             <Label x:Name="titleLabel" FontWeight="Bold"  Margin="0,0,0,0.4" HorizontalContentAlignment="Left"  Foreground="White"  FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="267">全科医生机器人辅助诊断系统</Label>
            
             <Button Template="{StaticResource MinBtn}" Margin="35,0,0,0" x:Name="MinBtn" Click="MinBtn_Click"/>
-            <Button Template="{StaticResource CloseBtn}" Margin="5,0,0,0" x:Name="CloseBtn" Click="CloseBtn_Click"/>
+            <Button Template="{StaticResource CloseBtn}" Margin="5,0,0,0" x:Name="CloseBtn" Click="MinBtn_Click"/>
         </StackPanel>
         <StackPanel  Grid.Row="1" Background="White">
             <Grid>
