--- a/Doctor/MainWindow.xaml
+++ b/Doctor/MainWindow.xaml
@@ -16,7 +16,7 @@
             <Label x:Name="titleLabel" FontWeight="Bold"  Margin="0,0,0,0.4" HorizontalContentAlignment="Left"  Foreground="White"  FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="417">全科医生机器人辅助诊断系统</Label>
             <Button Template="{StaticResource MaxBtn}" Margin="510,0,0,0" x:Name="MaxBtn" Visibility="Collapsed"/>
             <Button Template="{StaticResource MinBtn}" Margin="540,0,0,0" x:Name="MinBtn" Click="MinBtn_Click"/>
-            <Button Template="{StaticResource CloseBtn}" Margin="5,0,0,0" x:Name="CloseBtn" Click="CloseBtn_Click"/>
+            <Button Template="{StaticResource CloseBtn}" Margin="5,0,0,0" x:Name="CloseBtn" Click="MinBtn_Click"/>
         </StackPanel>
         <StackPanel  Grid.Row="1" Background="#e6e6e6">
             <Grid>
@@ -350,7 +350,7 @@
 
                                 <ListBox.ItemsPanel>
                                     <ItemsPanelTemplate>
-                                        <WrapPanel Orientation="Vertical" IsItemsHost="True" Width="280"  />
+                                        <WrapPanel Orientation="Vertical" IsItemsHost="True" Width="270"  />
                                     </ItemsPanelTemplate>
                                 </ListBox.ItemsPanel>
                                 <ListBox.ItemTemplate >
