--- a/Doctor/Plan.xaml
+++ b/Doctor/Plan.xaml
@@ -372,7 +372,7 @@
                                             <StackPanel Orientation="Horizontal">
                                                 <Label Height="35" Width="80" FontSize="11"  Padding="0" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="{Binding itemName}"></Label>
                                                 <Label Height="35" Width="220" FontSize="9"  Padding="0" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="{Binding drugInstructions}"></Label>
-                                                <Button Tag="{Binding drugid}" Click="Button_Click" Background="White" BorderBrush="White"  FontSize="11" FontWeight="Bold" Foreground="#009EFF" HorizontalContentAlignment="Right" Width="60">药品说明</Button>
+                                                <Button Visibility="{Binding showDrugId}" Tag="{Binding drugid}" Click="Button_Click" Background="White" BorderBrush="White"  FontSize="11" FontWeight="Bold" Foreground="#009EFF" HorizontalContentAlignment="Right" Width="60">药品说明</Button>
                                             </StackPanel>
                                         </DataTemplate>
 
